--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,42 @@
-/* add reset.css file */
+/* add normalize.css file */
 @import "normalize.css";
 
+:root {
+    --bckground-color: rgb(34,50,61);
+    --background-header-color: rgba(8,28,36, 1);
+}
+
 body {
-    background: rgb(34,50,61);    
-    display: flex;
+    background: var(--bckground-color); 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
 }
 
 header {
-    background: rgba(8,28,36, 1);
+    background: var(--background-header-color);
     height: 60px;
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     text-align: center;
+}
+
+li {
+    list-style-type: none;
+    overflow: hidden;
+}
+
+li img {
+    float: left;
+    clear: both;
+    padding: 3px;
+}
+
+section {
+    width: 50%;
+    margin: auto;
+    padding-top: 70px;
 }
 
 .header--logo {
@@ -25,6 +48,14 @@ header {
     margin: 0 auto;
 }
 
+.page__title--color {
+    color: rgba(245, 245, 220, 1);
+}
+
+.element--center {
+    text-align: center;
+}
+
 .hide {
     display: none;
 }
@@ -33,8 +64,3 @@ header {
     display: block;
 }
 
-section {
-    width: 50%;
-    margin: auto;
-    
-}
