--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,8 @@ header {
 li {
     list-style-type: none;
     overflow: hidden;
+    background-color: rgba(42,58,68, .7);
+    margin: 15px 0;
 }
 
 li img {
